objects/Lead_Referral_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Custom__c</fullName>
        <label>Customer End User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName+&apos; &apos;+Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Text(Account__r.Country__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Lead_Referral_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value_Amount__c</fullName>
        <label>Annual Contract Value Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Submitted</fullName>
                </value>
                <value>
                    <fullName>NA-RCM Approved</fullName>
                </value>
                <value>
                    <fullName>NA-RCM Rejected</fullName>
                </value>
                <value>
                    <fullName>NA- Channel Manager Approved</fullName>
                </value>
                <value>
                    <fullName>NA- Channel Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>End User AM Approved</fullName>
                </value>
                <value>
                    <fullName>End User AM Rejected</fullName>
                </value>
                <value>
                    <fullName>NA-Account Executive Approved</fullName>
                </value>
                <value>
                    <fullName>NA-Account Executive Rejected</fullName>
                </value>
                <value>
                    <fullName>NA-AE Sales Manager Approved</fullName>
                </value>
                <value>
                    <fullName>NA-AE Sales Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>LATAM- Channel Manager Approved</fullName>
                </value>
                <value>
                    <fullName>LATAM- Channel Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>LATAM-  Account Executive Approved</fullName>
                </value>
                <value>
                    <fullName>LATAM- Account Executive Rejected</fullName>
                </value>
                <value>
                    <fullName>LATAM- AE Sales Manager Approved</fullName>
                </value>
                <value>
                    <fullName>LATAM- AE Sales Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>LATAM- RCM Approved</fullName>
                </value>
                <value>
                    <fullName>LATAM- RCM Rejected</fullName>
                </value>
                <value>
                    <fullName>APAC- Channel Manager Approved</fullName>
                </value>
                <value>
                    <fullName>APAC- Channel Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>APAC- Account Executive Approved</fullName>
                </value>
                <value>
                    <fullName>APAC- Account Executive Rejected</fullName>
                </value>
                <value>
                    <fullName>APAC- AE Sales Manager Approved</fullName>
                </value>
                <value>
                    <fullName>APAC- AE Sales Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>APAC- RCM Approved</fullName>
                </value>
                <value>
                    <fullName>APAC- RCM Rejected</fullName>
                </value>
                <value>
                    <fullName>EMEA- Channel Manager Approved</fullName>
                </value>
                <value>
                    <fullName>EMEA- Channel Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>EMEA- Account Executive Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_budget_for_this_lead__c</fullName>
        <inlineHelpText>Approved Budget</inlineHelpText>
        <label>Approved budget for this lead ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_size_of_this_lead__c</fullName>
        <inlineHelpText>What is the approximate size of this Genesys lead &amp; which Genesys solutions are being proposed?</inlineHelpText>
        <label>Approximate size of this lead</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_of_Materials__c</fullName>
        <label>Bill of Materials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <inlineHelpText>Enter the budget amount</inlineHelpText>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMapproval_after_SMapproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CMapproval_after _SMapproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <label>Campaign Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel Manager is User Lookup</description>
        <label>Channel Manager User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Referral_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Account__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_City__c</fullName>
        <label>Customer Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Lead Referral Registrations</relationshipLabel>
        <relationshipName>Lead_Referral_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Email__c</fullName>
        <label>Customer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Name__c</fullName>
        <label>Customer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Phone__c</fullName>
        <label>Customer Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_State__c</fullName>
        <label>Customer Contact State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Division_Group__c</fullName>
        <label>Customer Division/Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_End_User_Company_Name__c</fullName>
        <label>Customer (End User) Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_all_solutions_currently_owned__c</fullName>
        <inlineHelpText>If yes to the above please describe all solutions currently owned.</inlineHelpText>
        <label>Describe all solutions currently owned</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>What is the lead Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Referral Registrations (End User Account)</relationshipLabel>
        <relationshipName>Lead_Referral_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genesys_AE__c</fullName>
        <label>Account Executive at Genesys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Genesys Channel Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Lead_Referral_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Yes__c</fullName>
        <label>If Yes,</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_this_a_new_logo_or_green_field_opp__c</fullName>
        <inlineHelpText>Is this a new logo or green field lead for Genesys?</inlineHelpText>
        <label>Is this a new logo or green field opp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Offer__c</fullName>
        <description>What it Does? Stores list of lead offers.
Downstream Impact? N/A 
Which department is owner? IT
DL 1/16/19 Requested to update label only to Lead Platform</description>
        <inlineHelpText>The combination of previous platform type &amp; offering type selections made to classify a lead referral registration</inlineHelpText>
        <label>Lead Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Offer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Amount__c</fullName>
        <label>License Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_All_the_Vendors__c</fullName>
        <inlineHelpText>List other vendors participating in this lead</inlineHelpText>
        <label>List All the Vendors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Master_Agent_Lead_Type__c</fullName>
        <description>DL 3/26/19 Manually populated by Finance. Read only for all other profiles</description>
        <label>Master Agent Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Influential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Agents__c</fullName>
        <label>Number of Agents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-250</fullName>
                </value>
                <value>
                    <fullName>251-500</fullName>
                </value>
                <value>
                    <fullName>501-1000</fullName>
                </value>
                <value>
                    <fullName>1001-5000</fullName>
                </value>
                <value>
                    <fullName>&gt;5001</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <label>Offering Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Offer__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Pilot/Trial/POC</fullName>
                </value>
                <value>
                    <fullName>Offer Conversion</fullName>
                </value>
                <value>
                    <fullName>Enterprise License Agreement (ELA)</fullName>
                </value>
                <value>
                    <fullName>Version Upgrade</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner (PPU)</fullName>
                </value>
                <value>
                    <fullName>Migration &amp; Conversion</fullName>
                    <isActive>false</isActive>
                    <label>Migration &amp; Conversion</label>
                </value>
                <value>
                    <fullName>Platform Migration</fullName>
                    <isActive>false</isActive>
                    <label>Platform Migration</label>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                    <isActive>false</isActive>
                    <label>Subscription</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offerings_Type__c</fullName>
        <label>Offerings Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Partner (PPU)</fullName>
                </value>
                <value>
                    <fullName>Premier Edition</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect</fullName>
                </value>
                <value>
                    <fullName>PureEngage</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lead Referral Registrations</relationshipLabel>
        <relationshipName>Lead_Referral_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Agent_Company__c</fullName>
        <description>This field will be used by the partner when they are a master agent.These leads are coming from other smaller partners and this field will be used to tag to them so the Master Agent partners know who sourced them.</description>
        <label>Partner Agent Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Agent_Name__c</fullName>
        <description>This field will be used by the partner when they are a master agent.These leads are coming from other smaller partners and this field will be used to tag to them so the Master Agent partners know who sourced them.</description>
        <label>Partner Agent Name:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Percentage_Referral_Fee__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Percentage Referral Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <label>Platform Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Please_provide_documentaion__c</fullName>
        <inlineHelpText>If yes to any of the above, please provide documentation to your Channel Manager</inlineHelpText>
        <label>Please provide documentaion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.End_User_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lead Referral Registrations (Primary Contact)</relationshipLabel>
        <relationshipName>Lead_Referral_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Solution_Category__c</fullName>
        <label>Primary Solution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Workforce Optimization</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Omnichannel Desktop</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Workload Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_of_Concept__c</fullName>
        <label>Proof of Concept</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis__c</fullName>
        <label>ROI Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Submitted</fullName>
                    <default>true</default>
                    <label>Request Submitted</label>
                </value>
                <value>
                    <fullName>Request Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>This_lead_is_for__c</fullName>
        <label>This lead is for:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_any_existing_Genesys_Solution__c</fullName>
        <inlineHelpText>Does this prospect currently own and use any existing Genesys Solution?</inlineHelpText>
        <label>Use any existing Genesys Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Referral_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_In_Place__c</fullName>
        <label>Vendor In Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vendor_In_Place</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_this_lead_sourced_by_Genesys__c</fullName>
        <inlineHelpText>Was this lead sourced by Genesys</inlineHelpText>
        <label>Was this lead sourced by Genesys</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_Expected_Close_Date__c</fullName>
        <label>What is the Expected Close Date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_is_value_proposition_for_this_opp__c</fullName>
        <inlineHelpText>What is the value proposition for this lead, and which Genesys solution is being proposed?</inlineHelpText>
        <label>What is value proposition for this opp</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_at_Genesys_is_your_Channel_Manager__c</fullName>
        <label>Channel Manager</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Regions__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Alan Hylton</fullName>
                </value>
                <value>
                    <fullName>Andrea Badalamenti</fullName>
                </value>
                <value>
                    <fullName>Carolina Castro</fullName>
                </value>
                <value>
                    <fullName>Daniel Cody</fullName>
                </value>
                <value>
                    <fullName>Daniel Oates</fullName>
                </value>
                <value>
                    <fullName>Danny Pompeo</fullName>
                </value>
                <value>
                    <fullName>Dario Carbone</fullName>
                </value>
                <value>
                    <fullName>David Lee</fullName>
                </value>
                <value>
                    <fullName>Guan Tan</fullName>
                </value>
                <value>
                    <fullName>Hiroyasu Lee</fullName>
                </value>
                <value>
                    <fullName>Jonathan Harris Evans</fullName>
                </value>
                <value>
                    <fullName>Jose Ferreira</fullName>
                </value>
                <value>
                    <fullName>Juergen Heim</fullName>
                </value>
                <value>
                    <fullName>Karine Leroux</fullName>
                </value>
                <value>
                    <fullName>Maria Montes</fullName>
                </value>
                <value>
                    <fullName>Mark Kayserman</fullName>
                </value>
                <value>
                    <fullName>Matilda Persson</fullName>
                </value>
                <value>
                    <fullName>Mauro Simoncini</fullName>
                </value>
                <value>
                    <fullName>Maxime Dilly</fullName>
                </value>
                <value>
                    <fullName>Mike McCrady</fullName>
                </value>
                <value>
                    <fullName>Nina Zarour</fullName>
                </value>
                <value>
                    <fullName>Osen Akkemik</fullName>
                </value>
                <value>
                    <fullName>Partner Alias</fullName>
                </value>
                <value>
                    <fullName>Phyllis Mather</fullName>
                </value>
                <value>
                    <fullName>Rex Lofland</fullName>
                </value>
                <value>
                    <fullName>Ron Baxter</fullName>
                </value>
                <value>
                    <fullName>Ron Grizer</fullName>
                </value>
                <value>
                    <fullName>Ronnie Wong</fullName>
                </value>
                <value>
                    <fullName>Sanjay Pai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_is_the_competitor_in_this_account__c</fullName>
        <label>Who is the competitor in this account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Your_Company_Name__c</fullName>
        <label>Your Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Email__c</fullName>
        <label>Your Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Your_Name__c</fullName>
        <label>Your Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Title__c</fullName>
        <label>Your Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>competitive_displacement_lead__c</fullName>
        <inlineHelpText>Is this a competitive displacement lead for Genesys?</inlineHelpText>
        <label>Competitive Displacement lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>competitive_opp_description__c</fullName>
        <inlineHelpText>Please describe the competitive lead in this account and describe the partner’s role in competitive positioning</inlineHelpText>
        <label>Competitive Lead Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isCMApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCMApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lead_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filtered lookup based on region to User object to be used as Channel Manager for lead Registration approval process in partner portal</description>
        <inlineHelpText>Please select Region before selecting Channel Manager</inlineHelpText>
        <label>lead Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Referral_Registration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Referral Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Genesys_AE__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Who_at_Genesys_is_your_Channel_Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Percentage_Referral_Fee__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>What_is_the_Expected_Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>North_America_Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Genesys_AE__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Who_at_Genesys_is_your_Channel_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Request Submitted,Request Pending</value>
        </filters>
        <filters>
            <field>Account_Region__c</field>
            <operation>equals</operation>
            <value>North America</value>
        </filters>
        <label>North America Pending Approval</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Referral Registrations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>